--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "date-fns": "^3.3.1",
     "nuxt": "^3.10.0",
+    "ofetch": "^1.3.3",
+    "ohmyfetch": "^0.4.21",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
