--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
+    "axios": "^1.6.7",
     "date-fns": "^3.3.1",
+    "js-cookie": "^3.0.5",
     "nuxt": "^3.10.0",
     "ofetch": "^1.3.3",
     "ohmyfetch": "^0.4.21",
